// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jwXOFh sc-bdfBwQ ipzXGW"
              disabled=""
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 krGlGD"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateInput  8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bEnuwL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hmIkGn"
      >
        <div
          class="sc-gsTCUz kLVDRr"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-bdfBwQ ipzXGW"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT sc-dlfnbm cVArRP"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 kYLWbR"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 dEeaTZ"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
